# radar_visualizer

./: .gitignore  CMakeLists.txt  README.md
gui/: Main.qml  PpiProvider.cpp  PpiProvider.hpp  RadarBackend.cpp  RadarBackend.hpp  main.cpp
processing/: Metrics.cpp  Metrics.hpp  RadarParser.cpp  RadarParser.hpp  main.cpp  metrics_cli.cpp
processing/tests/: CMakeLists.txt  test_load.cpp  test_metrics.cpp
scripts/: generate_degraded.py  metrics_common.py  non_regression.py  reference_metrics.json  requirements.txt  test_non_regression.py  valid_reference.py
